libbulletc/src/btQuantizedBvh_wrap.h

	EXPORT btQuantizedBvhNode* btQuantizedBvhNode_new();

	EXPORT int btQuantizedBvhNode_getEscapeIndex(btQuantizedBvhNode* obj);

	EXPORT int btQuantizedBvhNode_getEscapeIndexOrTriangleIndex(btQuantizedBvhNode* obj);

	EXPORT int btQuantizedBvhNode_getPartId(btQuantizedBvhNode* obj);

	EXPORT unsigned short* btQuantizedBvhNode_getQuantizedAabbMax(btQuantizedBvhNode* obj);

	EXPORT unsigned short* btQuantizedBvhNode_getQuantizedAabbMin(btQuantizedBvhNode* obj);

	EXPORT int btQuantizedBvhNode_getTriangleIndex(btQuantizedBvhNode* obj);

	EXPORT bool btQuantizedBvhNode_isLeafNode(btQuantizedBvhNode* obj);

	EXPORT void btQuantizedBvhNode_setEscapeIndexOrTriangleIndex(btQuantizedBvhNode* obj, int value);

	EXPORT void btQuantizedBvhNode_delete(btQuantizedBvhNode* obj);


	EXPORT btOptimizedBvhNode* btOptimizedBvhNode_new();

	EXPORT void btOptimizedBvhNode_getAabbMaxOrg(btOptimizedBvhNode* obj, btVector3* value);

	EXPORT void btOptimizedBvhNode_getAabbMinOrg(btOptimizedBvhNode* obj, btVector3* value);

	EXPORT int btOptimizedBvhNode_getEscapeIndex(btOptimizedBvhNode* obj);

	EXPORT int btOptimizedBvhNode_getSubPart(btOptimizedBvhNode* obj);

	EXPORT int btOptimizedBvhNode_getTriangleIndex(btOptimizedBvhNode* obj);

	EXPORT void btOptimizedBvhNode_setAabbMaxOrg(btOptimizedBvhNode* obj, const btVector3* value);

	EXPORT void btOptimizedBvhNode_setAabbMinOrg(btOptimizedBvhNode* obj, const btVector3* value);

	EXPORT void btOptimizedBvhNode_setEscapeIndex(btOptimizedBvhNode* obj, int value);

	EXPORT void btOptimizedBvhNode_setSubPart(btOptimizedBvhNode* obj, int value);

	EXPORT void btOptimizedBvhNode_setTriangleIndex(btOptimizedBvhNode* obj, int value);

	EXPORT void btOptimizedBvhNode_delete(btOptimizedBvhNode* obj);


	EXPORT void btNodeOverlapCallback_processNode(btNodeOverlapCallback* obj, int subPart, int triangleIndex);

	EXPORT void btNodeOverlapCallback_delete(btNodeOverlapCallback* obj);