BulletSharpPInvoke/Collision/QuantizedBvh.cs

using System;
using System.Runtime.InteropServices;
using System.Security;
using BulletSharp.Math;

namespace BulletSharp
{
	public class QuantizedBvhNode : IDisposable
	{
		internal IntPtr _native;

		internal QuantizedBvhNode(IntPtr native)
		{
			_native = native;
		}

		public QuantizedBvhNode()
		{
			_native = btQuantizedBvhNode_new();
		}

		public int EscapeIndex
		{
			get { return btQuantizedBvhNode_getEscapeIndex(_native); }
		}

		public int EscapeIndexOrTriangleIndex
		{
			get { return btQuantizedBvhNode_getEscapeIndexOrTriangleIndex(_native); }
			set { btQuantizedBvhNode_setEscapeIndexOrTriangleIndex(_native, value); }
		}

		public bool IsLeafNode
		{
			get { return btQuantizedBvhNode_isLeafNode(_native); }
		}

		public int PartId
		{
			get { return btQuantizedBvhNode_getPartId(_native); }
		}
        /*
		public UShortArray QuantizedAabbMax
		{
			get { return btQuantizedBvhNode_getQuantizedAabbMax(_native); }
		}

		public UShortArray QuantizedAabbMin
		{
			get { return btQuantizedBvhNode_getQuantizedAabbMin(_native); }
		}
        */
		public int TriangleIndex
		{
			get { return btQuantizedBvhNode_getTriangleIndex(_native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btQuantizedBvhNode_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~QuantizedBvhNode()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btQuantizedBvhNode_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btQuantizedBvhNode_getEscapeIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btQuantizedBvhNode_getEscapeIndexOrTriangleIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btQuantizedBvhNode_getPartId(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btQuantizedBvhNode_getQuantizedAabbMax(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btQuantizedBvhNode_getQuantizedAabbMin(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btQuantizedBvhNode_getTriangleIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		[return: MarshalAs(UnmanagedType.I1)]
		static extern bool btQuantizedBvhNode_isLeafNode(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btQuantizedBvhNode_setEscapeIndexOrTriangleIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btQuantizedBvhNode_delete(IntPtr obj);
	}

	public class OptimizedBvhNode : IDisposable
	{
		internal IntPtr _native;

		internal OptimizedBvhNode(IntPtr native)
		{
			_native = native;
		}

		public OptimizedBvhNode()
		{
			_native = btOptimizedBvhNode_new();
		}

		public Vector3 AabbMaxOrg
		{
			get
			{
				Vector3 value;
				btOptimizedBvhNode_getAabbMaxOrg(_native, out value);
				return value;
			}
			set { btOptimizedBvhNode_setAabbMaxOrg(_native, ref value); }
		}

		public Vector3 AabbMinOrg
		{
			get
			{
				Vector3 value;
				btOptimizedBvhNode_getAabbMinOrg(_native, out value);
				return value;
			}
			set { btOptimizedBvhNode_setAabbMinOrg(_native, ref value); }
		}

		public int EscapeIndex
		{
			get { return btOptimizedBvhNode_getEscapeIndex(_native); }
			set { btOptimizedBvhNode_setEscapeIndex(_native, value); }
		}

		public int SubPart
		{
			get { return btOptimizedBvhNode_getSubPart(_native); }
			set { btOptimizedBvhNode_setSubPart(_native, value); }
		}

		public int TriangleIndex
		{
			get { return btOptimizedBvhNode_getTriangleIndex(_native); }
			set { btOptimizedBvhNode_setTriangleIndex(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btOptimizedBvhNode_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~OptimizedBvhNode()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btOptimizedBvhNode_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_getAabbMaxOrg(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_getAabbMinOrg(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btOptimizedBvhNode_getEscapeIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btOptimizedBvhNode_getPadding(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btOptimizedBvhNode_getSubPart(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btOptimizedBvhNode_getTriangleIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setAabbMaxOrg(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setAabbMinOrg(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setEscapeIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setPadding(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setSubPart(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_setTriangleIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btOptimizedBvhNode_delete(IntPtr obj);
	}
    /*
	public class BvhSubtreeInfo : IDisposable
	{
		internal IntPtr _native;

		internal BvhSubtreeInfo(IntPtr native)
		{
			_native = native;
		}

		public BvhSubtreeInfo()
		{
			_native = btBvhSubtreeInfo_new();
		}

		public void SetAabbFromQuantizeNode(QuantizedBvhNode quantizedNode)
		{
			btBvhSubtreeInfo_setAabbFromQuantizeNode(_native, quantizedNode._native);
		}

		public int Padding
		{
			get { return btBvhSubtreeInfo_getPadding(_native); }
			set { btBvhSubtreeInfo_setPadding(_native, value._native); }
		}

		public unsigned short QuantizedAabbMax
		{
			get { return btBvhSubtreeInfo_getQuantizedAabbMax(_native); }
			set { btBvhSubtreeInfo_setQuantizedAabbMax(_native, value._native); }
		}

		public unsigned short QuantizedAabbMin
		{
			get { return btBvhSubtreeInfo_getQuantizedAabbMin(_native); }
			set { btBvhSubtreeInfo_setQuantizedAabbMin(_native, value._native); }
		}

		public int RootNodeIndex
		{
			get { return btBvhSubtreeInfo_getRootNodeIndex(_native); }
			set { btBvhSubtreeInfo_setRootNodeIndex(_native, value); }
		}

		public int SubtreeSize
		{
			get { return btBvhSubtreeInfo_getSubtreeSize(_native); }
			set { btBvhSubtreeInfo_setSubtreeSize(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btBvhSubtreeInfo_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~BvhSubtreeInfo()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btBvhSubtreeInfo_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btBvhSubtreeInfo_getPadding(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btBvhSubtreeInfo_getQuantizedAabbMax(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btBvhSubtreeInfo_getQuantizedAabbMin(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btBvhSubtreeInfo_getRootNodeIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btBvhSubtreeInfo_getSubtreeSize(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setAabbFromQuantizeNode(IntPtr obj, IntPtr quantizedNode);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setPadding(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setQuantizedAabbMax(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setQuantizedAabbMin(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setRootNodeIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_setSubtreeSize(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btBvhSubtreeInfo_delete(IntPtr obj);
	}
    */
	public class NodeOverlapCallback : IDisposable
	{
		internal IntPtr _native;

		internal NodeOverlapCallback(IntPtr native)
		{
			_native = native;
		}

		public void ProcessNode(int subPart, int triangleIndex)
		{
			btNodeOverlapCallback_processNode(_native, subPart, triangleIndex);
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btNodeOverlapCallback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~NodeOverlapCallback()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btNodeOverlapCallback_processNode(IntPtr obj, int subPart, int triangleIndex);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btNodeOverlapCallback_delete(IntPtr obj);
	}

	public class QuantizedBvh : IDisposable
	{
        public enum TraversalMode
		{
			Stackless,
			StacklessCacheFriendly,
			Recursive
		}

		internal IntPtr _native;
